--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -3,7 +3,7 @@
     <mgl-map (click)="onMapClickEvent($event)"
              (moveEnd)="onMoveEnd()"
              (load)="loadMap($event)"
-             (rotate)="onRotate()"
+             (rotateEnd)="onRotate()"
              (zoomEnd)="onZoomEnd()"
              (pitchEnd)="onPitchEnd()"
              [bounds]="bounds"
