--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -291,7 +291,8 @@
             </div>
         </div>
     </div>
-    <div class="card">
+    <div *ngIf="filteredFeatures[0]"
+         class="card">
         <div class="card-header">
             <div class="row">
                 <h5 class="col-12 mb-0"
