--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -21,8 +21,8 @@
                         <p i18n="@@bodenrichtwerte_shortdescription">Auskünfte über Bodenrichtwerte für Bauland und
                             Flächen der Land- und Forstwirtschaft</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('bodenrichtwerte')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('bodenrichtwerte')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
@@ -42,8 +42,8 @@
                         <p i18n="@@grundstuecksmarktberichte_shortdescription">Einblicke in den Grundstücksmarkt und der
                             Entwicklung des Preisniveau der einzelnen Gutachterausschüsse</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('grundstuecksmarktberichte')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('grundstuecksmarktberichte')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
@@ -63,8 +63,8 @@
                         <p i18n="@@landesgrundstuecksmarktdaten_shortdescription">Eine Analyse des Grundstücksmarktes in
                             ganz Niedersachsen vom oberen Gutachterausschuss</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('landesgrundstuecksmarktdaten')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('landesgrundstuecksmarktdaten')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
@@ -86,8 +86,8 @@
                         <p i18n="@@immobilienpreisindex_shortdescription">Darstellung der Preisentwicklung von
                             Eigenheimen und Eigentumswohnungen</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('immobilienpreisindex')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('immobilienpreisindex')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
@@ -109,8 +109,8 @@
                         <p i18n="@@immobilienpreiskalkulator_shortdescription">Ein Rechner zum ermitteln eines
                             geschätzten Preisniveau einer Immobilien</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('immobilienpreiskalkulator')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('immobilienpreiskalkulator')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
@@ -132,8 +132,8 @@
                         <p i18n="@@bodenwertkalkulator_shortdescription">Rechner zum summieren von geschätzten Preisen
                             von Flurstücken</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('bodenwertkalkulator')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('bodenwertkalkulator')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
@@ -155,8 +155,8 @@
                         <p i18n="@@forms_shortdescription">Wenn Sie ein Formular einreichen wollen, finden Sie hier
                             unsere Formulare</p>
                         <a class="btn btn-primary"
-                           href="javascript:;"
-                           (click)="scrollToElement('forms')"
+                           href=""
+                           (click)="$event.preventDefault(); scrollToElement('forms')"
                            role="button"
                            i18n>Mehr dazu</a>
                     </div>
