--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -313,21 +313,21 @@
                     <h5 i18n>Informationen</h5>
                     <ul class="list-unstyled text-small">
                         <li class="my-1">
-                            <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/impressum-88015.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
                                i18n>Impressum</a>
                         </li>
                         <li class="my-1">
-                            <a href="https://www.gag.niedersachsen.de/startseite/service/datenschutzerklarung/datenschutz-im-lgln-138166.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/service/datenschutzerklarung/"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
                                i18n>Datenschutz</a>
                         </li>
                         <li class="my-1">
-                            <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/nutzungsbedingungen/nutzungsbedingungen-88317.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/nutzungsbedingungen/"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
@@ -372,28 +372,28 @@
                             i18n>Bodenrichtwerte</h5>
                         <ul class="list-unstyled text-small">
                             <li class="my-1">
-                                <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/kontakt/kontakt-88078.html"
+                                <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/kontakt/"
                                    class="footer-link"
                                    target="_blank"
                                    rel="noopener noreferrer nofollow"
                                    i18n>Kontakt</a>
                             </li>
                             <li class="my-1">
-                                <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/gutachterausschuesse-88016.html"
+                                <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/"
                                    class="footer-link"
                                    target="_blank"
                                    rel="noopener noreferrer nofollow"
                                    i18n>Gutachterausschüsse - Niedersachsen</a>
                             </li>
                             <li class="my-1">
-                                <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/legende_bauland/legende-zur-bodenrichtwertkarte-bauland-88020.html"
+                                <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/legende_bauland/"
                                    class="footer-link"
                                    target="_blank"
                                    rel="noopener noreferrer nofollow"
                                    i18n>Legende zur Bodenrichtwertkarte Bauland</a>
                             </li>
                             <li class="my-1">
-                                <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/legende_landwirtschaft/legende-zur-bodenrichtwertkarte-landwirtschaft-88023.html"
+                                <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/legende_landwirtschaft/"
                                    class="footer-link"
                                    target="_blank"
                                    rel="noopener noreferrer nofollow"
