--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -138,7 +138,7 @@
             <!-- pagination -->
             <div class="col-12 col-md-7 col-xl-8 p-0 scrolllist">
                 <nav i18n-aria-label
-                     aria-label="Formular page navigation"
+                     aria-label="Formular Seitennavigation"
                      class="mb-2 mb-md-0">
                     <ul class="pagination m-0">
                         <smooth-dnd-container groupName="pagination"
