--- a/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/flurstueck-search/flurstueck-search.component.html
@@ -14,6 +14,7 @@
                        placeholder="Gemarkung"
                        i18n-placeholder
                        aria-label="Suche"
+                       i18n-aria-label
                        aria-placeholder="Bitte Gemarkung eingeben"
                        i18n-aria-placeholder
                        #gemarkung="ngModel"
