--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -2,6 +2,7 @@
     <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white"
          style="z-index: 1000;">
         <a class="navbar-brand"
+           i18n-title
            title="Zur Startseite"
            [routerLink]="['/']"
            style="color: #343a40;">
@@ -22,6 +23,7 @@
                 style="border: none; padding-right: 0;"
                 type="button"
                 (click)="isCollapsed = !isCollapsed"
+                i18n-aria-label
                 aria-label="Navigation umschalten"
                 *ngIf="config.modules.length > 0">
             <span class="navbar-toggler-icon"
@@ -339,9 +341,9 @@
                 <div class="col-12 col-md-6 col-lg-4 p-1 m-0">
                     <ng-container *ngIf="config.localized">
                         <h5 id="languages"
+                            i18n-title
                             title="Sprachauswahl"
-                            i18n
-                            i18n-title>Sprache</h5>
+                            i18n>Sprache</h5>
                         <ul class="list-unstyled text-small">
                             <li class="my-1">
                                 <a href="{{ baseurl }}"
