--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -146,6 +146,7 @@
                    [href]="printURL()"
                    target="_blank"
                    rel="noopener noreferrer nofollow"
+                   i18n-alt
                    alt="Bodenrichtwerte - amtlicher Ausdruck"
                    title="Bodenrichtwerte - amtlicher Ausdruck"
                    i18n-title>
@@ -162,7 +163,8 @@
                               d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
                     </svg>
                     <span class="d-none"
-                          aria-hidden="true">Bodenrichtwerte - amtlicher Ausdruck </span>
+                          aria-hidden="true"
+                          i18n>Bodenrichtwerte - amtlicher Ausdruck</span>
                 </a>
             </div>
             <div class="p-0"
@@ -171,11 +173,11 @@
                         class="nav-link btn py-2 pl-1 pr-3"
                         [ngClass]="{'active': hintsActive}"
                         type="button"
-                        alt="Hinweise zur aktuellen Darstellung"
-                        title="Hinweise zur aktuellen Darstellung"
-                        (click)="hintsActive = !hintsActive"
                         i18n-alt
-                        i18n-title>
+                        alt="Hinweise zur aktuellen Darstellung"
+                        i18n-title
+                        title="Hinweise zur aktuellen Darstellung"
+                        (click)="hintsActive = !hintsActive">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          width="20px"
                          height="20px"
@@ -260,19 +262,20 @@
                 </svg>
                 <span class="d-inline-block">
                     <span *ngIf="flurstueck.features[0]?.properties.gemarkungsnummer">
-                        <small class="ml-2 mr-2"
-                               i18n>Gemarkung:
+                        <small class="ml-2 mr-2">
+                            <span i18n>Gemarkung:</span>
                             {{ flurstueck.features[0].properties.gemarkungsnummer }}
                         </small>
                     </span>
                     <span *ngIf="flurstueck.features[0]?.properties.flurnummer">
-                        <small class="mr-2"
-                               i18n>Flurnummer:
+                        <small class="mr-2">
+                            <span i18n>Flurnummer:</span>
                             {{ flurstueck.features[0].properties.flurnummer }}
                         </small>
                     </span>
                     <span *ngIf="flurstueck.features[0]?.properties.zaehler">
-                        <small i18n>Flurstück:
+                        <small>
+                            <span i18n>Flurstück:</span>
                             {{ flurstueck.features[0].properties.zaehler }}</small>
                         <small *ngIf="flurstueck.features[0]?.properties.nenner">/{{
                             flurstueck.features[0].properties.nenner }}
