--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -135,7 +135,7 @@
                 class="btn dropdown-toggle nav-link mobileBtn"
                 aria-controls="dropdown-teilmarkt-1"
                 aria-haspopup="true">
-            <span i18n>Teilmarkt</span>: {{teilmarkt?.text | hyphenate}}
+            <span i18n>Teilmarkt</span>: {{teilmarkt?.text}}
             <span class="caret"
                   aria-hidden="true"></span>
         </button>
@@ -161,7 +161,7 @@
                             cy="8"
                             r="8" />
                 </svg>
-                {{tm.text | hyphenate}}
+                {{tm.text}}
             </button>
         </div>
     </div>
