Added bremen as text

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -17,7 +17,7 @@
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system
-                            Niedersachsen</h3>
+                            Niedersachsen und Bremen</h3>
                         <p i18n="@@bodenrichtwerte_shortdescription">Auskünfte über Bodenrichtwerte für Bauland und
                             Flächen der Land- und Forstwirtschaft</p>
                         <a class="btn btn-primary"
@@ -200,7 +200,8 @@
                 </a>
                 <div class="lead">
                     <h3 class="h5 text-break"
-                        i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system Niedersachsen</h3>
+                        i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system Niedersachsen und
+                        Bremen</h3>
                     <p class="text-justify"
                        i18n="@@bodenrichtwerte_description">Die Gutachterausschüsse und der Obere Gutachterausschuss für
                         Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI
