--- a/power/src/app/static/notfound/notfound.component.html
+++ b/power/src/app/static/notfound/notfound.component.html
@@ -4,6 +4,6 @@
             i18n>Seite nicht gefunden</h1>
 
         <p class="lead mb-3"
-           i18n>Die von Ihnen aufgerufte Seite konnte nicht gefunden werden.</p>
+           i18n>Die von Ihnen aufgerufene Seite konnte nicht gefunden werden.</p>
     </div>
 </div>
