--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -6,6 +6,7 @@
              (rotateEnd)="onRotate()"
              (zoomEnd)="onZoomEnd()"
              (pitchEnd)="onPitchEnd()"
+             [transformRequest]="transformRequest"
              [bounds]="bounds"
              [maxZoom]="18"
              [minZoom]="5"
