--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -337,6 +337,7 @@
                     <mgl-map id="map"
                              (click)="onMapClickEvent($event)"
                              (load)="loadMap($event)"
+                             [transformRequest]="transformRequest"
                              [bounds]="bounds"
                              [maxZoom]="20"
                              [minZoom]="5"
