--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -250,7 +250,7 @@
             i18n-title
             title="Markierung fokussieren"
             (click)="onFocus()"
-            [disabled]="!this.latLng?.length">
+            [disabled]="!this.latLng">
         <svg xmlns="http://www.w3.org/2000/svg"
              width="20px"
              height="20px"
