Fix Lighthouse findings

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -9,6 +9,7 @@
             <img src="./assets/logos/gag-mini.png"
                  class="mr-2 align-top"
                  aria-hidden="true"
+                 width="25px"
                  height="25px"
                  i18n-alt
                  alt="LGLN Logo">
