--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -75,7 +75,7 @@
                         class="btn btn-secondary btn-sm"
                         i18n-title
                         title="Email-Adresse kopieren"
-                        aria-i18n-label
+                        i18n-aria-label
                         aria-label="Email-Adresse kopieren"
                         (click)="copyEmailToClipboard()">
                     <svg width="1em"
