--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -29,7 +29,7 @@
              role="group"
              (isOpenChange)="functionsActive = !functionsActive"
              dropdown>
-            <button class="btn dropdown-toggle nav-link"
+            <button class="btn bg-light border dropdown-toggle nav-link"
                     type="button"
                     title="Weitere Funktionen"
                     i18n-title
@@ -39,8 +39,8 @@
                     aria-haspopup="true"
                     aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg"
-                     width="20px"
-                     height="20px"
+                     width="18px"
+                     height="18px"
                      fill="currentColor"
                      class="bi bi-three-dots-vertical"
                      viewBox="0 0 16 16"
@@ -169,7 +169,7 @@
 
 <!-- Mobile - Teilmarkt and Stichtag dropdown button -->
 <ng-template #teilmarktStichtagDropdownButton>
-    <button class="nav-link btn"
+    <button class="nav-link btn bg-light border"
             [ngClass]="{'active': !filterActive}"
             type="button"
             (click)="filterActive = !filterActive"
@@ -177,8 +177,8 @@
             title="Stichtag und Teilmarkt filtern"
             i18n-alt
             i18n-title>
-        <svg width="20px"
-             height="20px"
+        <svg width="18px"
+             height="18px"
              viewBox="0 0 16 16"
              class="bi bi-chevron-double-down"
              fill="currentColor"
