--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -1,5 +1,5 @@
 /*!* You can add global styles to this file, and also import other style files *!*/
-/*// @import 'theme.scss';*/
+$primary: #006aff;
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-icons/font/bootstrap-icons.css';
 @import '~nouislider/distribute/nouislider.css';
