changed zoom default params

--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -32,7 +32,9 @@
             <button class="btn bg-light border dropdown-toggle nav-link"
                     type="button"
                     title="Weitere Funktionen"
+                    alt="Weitere Funktionen"
                     i18n-title
+                    i18n-alt
                     [ngClass]="{'active' : functionsActive}"
                     dropdownToggle
                     id="dropdownMenuButton"
